examples/legacy/invalid_scl/type_error_bad_cmp.scl
input tuple(usize, &str)
rel result(a, b) :- tuple(a, b), a != b
